--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #f8f1e8; /* Beige background */
 }
@@ -7,8 +6,8 @@ body {
   background: #f8f1e8; /* Beige background for the gradient */
 }
 
-.text-beige{
-  color:#be9c91
+.text-beige {
+  color: #be9c91;
 }
 
 .habit-card {
@@ -23,7 +22,7 @@ body {
 }
 
 .form-control {
-  font-size:0.9rem;
+  font-size: 0.9rem;
   background-color: #f5f5f5; /* Beige color for the input field */
   color: #333; /* Beige color for the input text */
 }
@@ -51,7 +50,6 @@ body {
   border-color: #be9c91; /* White form outline border */
 }
 
-
 .text-white-50 {
   color: #be9c91 !important; /* Light gray text color for small text */
 }
@@ -72,31 +70,42 @@ p {
   text-transform: uppercase;
 }
 .flex-container {
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .flex-item {
-flex-basis: calc(50% - 10px); /* Adjust the percentage and margin as needed */
-margin-bottom: 20px;
-background-color: #f8f1e8;
-padding: 20px;
-box-sizing: border-box;
-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-transition: transform 0.2s, box-shadow 0.2s;
+  flex-basis: calc(50% - 10px); /* Adjust the percentage and margin as needed */
+  margin-bottom: 20px;
+  background-color: #f8f1e8;
+  color:#be9c91;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s, box-shadow 0.2s;
+}
 
-
+.flex-item:hover {
+  flex-basis: calc(50% - 10px); /* Adjust the percentage and margin as needed */
+  margin-bottom: 20px;
+  background-color: #be9c91 !important;
+  border-color: #be9c91;
+  color:#f8f1e8;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
 /* Apply scale transform and box shadow on focus */
 .flex-item:focus {
-outline: none;
-transform: scale(1.05); /* Adjust the scale factor as needed */
-box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as needed */
+  outline: none;
+  transform: scale(1.05); /* Adjust the scale factor as needed */
+  box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as needed */
 }
-  /* Styles for the right icon */
-  .right-icon {
+/* Styles for the right icon */
+.right-icon {
   display: none;
 }
 
@@ -105,7 +114,6 @@ box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as nee
   display: inline-block;
   margin-left: 5px; /* Adjust the spacing between the text and icon */
 }
-
 
 .buttons {
   display: flex;
@@ -140,30 +148,28 @@ box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as nee
   color: #fff; /* White button text color on hover */
 }
 
-
 .container {
   margin-top: 20px;
 }
-
 
 .habit-name {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #be9c91
+  color: #be9c91;
 }
 
 .habit-status {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #be9c91
+  color: #be9c91;
 }
 
 .habit-streak {
   font-size: 18px;
   margin-bottom: 10px;
-  color: #be9c91
+  color: #be9c91;
 }
 
 .habit-table {
@@ -205,7 +211,6 @@ box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as nee
   color: #be9c91; /* Darker text color on button hover */
 }
 
-
 .circle-container {
   display: inline-flex; /* Display all circles inline */
   flex-direction: column;
@@ -214,6 +219,7 @@ box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as nee
 }
 
 .circle {
+  cursor: pointer;
   color: #fff;
   width: 30px;
   height: 30px;
@@ -245,6 +251,26 @@ box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as nee
   border-top: 1px solid #e9ecef;
   border-bottom: 1px solid #e9ecef;
   padding: 5px 0;
+}
+.habit-item a{
+  color: #be9c91;
+}
+.habit-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  border: 1px solid #e9ecef;
+  padding: 5px 0;
+  list-style: none;
+  background-color: #f9f9f9;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.habit-item:hover {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 .habit-title {
@@ -288,3 +314,4 @@ box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as nee
 .circle.selected {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
