--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,45 +1,34 @@
 body {
-  background-color: #f8f1e8; /* Beige background */
-}
+  background-color: #f8f1e8; }
 
 .gradient-custom {
-  background: #f8f1e8; /* Beige background for the gradient */
-}
+  background: #f8f1e8; }
 
 .text-beige {
   color: #be9c91;
 }
 
 .habit-card {
-  background-color: #fff; /* White card background */
-  border-radius: 1rem;
+  background-color: #fff;   border-radius: 1rem;
   padding: 20px;
   margin-bottom: 20px;
 }
 
 .form-label {
-  color: #be9c91; /* Beige color for the label */
-}
+  color: #be9c91; }
 
 .form-control {
   font-size: 0.9rem;
-  background-color: #f5f5f5; /* Beige color for the input field */
-  color: #333; /* Beige color for the input text */
-}
+  background-color: #f5f5f5;   color: #333; }
 
 .btn-outline-light {
-  color: #be9c91; /* Beige color for the button text */
-  border-color: #be9c91; /* Beige color for the button border */
-}
+  color: #be9c91;   border-color: #be9c91; }
 
 .btn-outline-light:hover {
-  background-color: #be9c91; /* Beige color on button hover */
-  color: #f5f5f5; /* White color on button hover */
-}
+  background-color: #be9c91;   color: #f5f5f5; }
 
 .card {
-  background-color: #fff; /* White card background */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: #fff;   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .card-body {
@@ -47,20 +36,16 @@ body {
 }
 
 .form-outline {
-  border-color: #be9c91; /* White form outline border */
-}
+  border-color: #be9c91; }
 
 .text-white-50 {
-  color: #be9c91 !important; /* Light gray text color for small text */
-}
+  color: #be9c91 !important; }
 
 .text-white-50:hover {
-  color: #f8f1e8 !important; /* White text color on hover */
-}
+  color: #f8f1e8 !important; }
 
 p {
-  color: #be9c91; /* White text color on hover */
-}
+  color: #be9c91; }
 
 .fw-bold {
   font-weight: bold;
@@ -76,8 +61,7 @@ p {
 }
 
 .flex-item {
-  flex-basis: calc(50% - 10px); /* Adjust the percentage and margin as needed */
-  margin-bottom: 20px;
+  flex-basis: calc(50% - 10px);   margin-bottom: 20px;
   background-color: #f8f1e8;
   color:#be9c91;
   padding: 20px;
@@ -87,8 +71,7 @@ p {
 }
 
 .flex-item:hover {
-  flex-basis: calc(50% - 10px); /* Adjust the percentage and margin as needed */
-  margin-bottom: 20px;
+  flex-basis: calc(50% - 10px);   margin-bottom: 20px;
   background-color: #be9c91 !important;
   border-color: #be9c91;
   color:#f8f1e8;
@@ -98,22 +81,16 @@ p {
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
-/* Apply scale transform and box shadow on focus */
 .flex-item:focus {
   outline: none;
-  transform: scale(1.05); /* Adjust the scale factor as needed */
-  box-shadow: 0 4px 8px rgba(190, 156, 145, 1); /* Adjust the shadow values as needed */
-}
-/* Styles for the right icon */
+  transform: scale(1.05);   box-shadow: 0 4px 8px rgba(190, 156, 145, 1); }
 .right-icon {
   display: none;
 }
 
-/* Styles for showing the right icon when the item is selected */
 .selected .right-icon {
   display: inline-block;
-  margin-left: 5px; /* Adjust the spacing between the text and icon */
-}
+  margin-left: 5px; }
 
 .buttons {
   display: flex;
@@ -121,32 +98,17 @@ p {
   margin-top: 30px;
 }
 
-/* Style for the "Skip" button */
 .btn-primary {
-  background-color: #f8f1e8; /* Beige button background */
-  border-color: #be9c91; /* Beige button border */
-  color: #fff; /* White button text color */
-}
+  background-color: #f8f1e8;   border-color: #be9c91;   color: #fff; }
 
-/* Style for the "Skip" button */
 .btn-primary:hover {
-  background-color: #be9c91; /* Beige button background */
-  border-color: #f8f1e8; /* Beige button border */
-  color: #f8f1e8 !important; /* White button text color */
-}
+  background-color: #be9c91;   border-color: #f8f1e8;   color: #f8f1e8 !important; }
 
-/* Style for the "Next" button */
 .btn-success {
-  background-color: #be9c91; /* Beige button background */
-  border-color: #be9c91; /* Beige button border */
-  color: #fff; /* White button text color */
-}
+  background-color: #be9c91;   border-color: #be9c91;   color: #fff; }
 
 .btn-success:hover {
-  background-color: #be9c91; /* Beige button background on hover */
-  border-color: #be9c91; /* Beige button border on hover */
-  color: #fff; /* White button text color on hover */
-}
+  background-color: #be9c91;   border-color: #be9c91;   color: #fff; }
 
 .container {
   margin-top: 20px;
@@ -202,18 +164,15 @@ p {
 }
 
 .btn-outline-light {
-  color: #be9c91; /* White button text color */
-  border-color: #be9c91; /* White button border color */
+  color: #be9c91; 
+  border-color: #be9c91;
 }
 
 .btn-outline-light:hover {
-  background-color: #fff; /* White button background on hover */
-  color: #be9c91; /* Darker text color on button hover */
-}
+  background-color: #fff;   color: #be9c91; }
 
 .circle-container {
-  display: inline-flex; /* Display all circles inline */
-  flex-direction: column;
+  display: inline-flex;   flex-direction: column;
   align-items: center;
   margin-right: 10px;
 }
@@ -224,8 +183,7 @@ p {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: #be9c91; /* Beige circle background */
-  display: flex;
+  background-color: #be9c91;   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1rem;
